chinh lai form code, them xu li ng choi het thoi gian

--- a/GameCaro/GameCaro.csproj
+++ b/GameCaro/GameCaro.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ChessBoardManager.cs" />
+    <Compile Include="LogicGame.cs" />
     <Compile Include="PlayInfor.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Constant.cs" />
